tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@invalid_plus_types.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/invalid_plus_types.txt
---
error: `+` requires operands to be both numbers or arrays, found `array` and `i64`
 --> invalid_plus_types.txt:1:3
  |
1 | {{ [1, 2] + 3 }}
  |    ^^^^^^^^^^
